@@ -1,6 +1,13 @@
 [9/7/2012]
 Version 0.6.8.2                             "Say 'what' again"
 
+- New features:
+
+  * [all]: Support for matching architectures using specification
+           strings and wildcards (for example, "linux-any").  See
+           Debian Policy section 11.1 "Architecture specification
+           strings" for more details.
+
 - Minor bugs:
 
   * [cmdline]: Fix typo which prevented installing tasks using the
